--- a/src/app/todos/todos.component.html
+++ b/src/app/todos/todos.component.html
@@ -4,5 +4,39 @@
 
 <!-- Html faltante -->
 <div>
-  <button class="btn btn-primary" (click)="randomMethod()">Search</button>
+  <input
+    type="text"
+    class="form-control mt-3"
+    placeholder="Search todos..."
+    [(ngModel)]="searchQuery"
+    (input)="onSearchQueryChange()"
+  />
+  <button
+    *ngIf="isSearchEnabled"
+    class="btn btn-primary mt-3"
+    (click)="searchTodos()"
+    [disabled]="!isSearchEnabled"
+  >
+    Search
+  </button>
 </div>
+
+<div *ngIf="selectedTodoId; else todosList">
+  <app-todo-detail [todoId]="selectedTodoId"></app-todo-detail>
+  <button class="btn btn-secondary mt-3" (click)="clearSelectedTodo()">Back to List</button>
+</div>
+
+<ng-template #todosList>
+  <div *ngIf="filteredTodos.length > 0; else noResults" class="mt-3">
+    <ul class="list-group">
+      <li *ngFor="let todo of filteredTodos" class="list-group-item d-flex justify-content-between align-items-center">
+        <span>{{ todo.title }}</span>
+        <button class="btn btn-secondary btn-sm" (click)="viewDetails(todo.id)">View Details</button>
+      </li>
+    </ul>
+  </div>
+</ng-template>
+
+<ng-template #noResults>
+  <p class="mt-3">No results found.</p>
+</ng-template>
